front-end/src/components/CSS/Jumbotron.css
* {
  font-family: Kanit, sans-serif;
}
.frontSlogan {
  font-size: 7em;
  /* 
  font-family: Kanit, sans-serif;
  color: #f2f2f2;
  position: absolute;
  left: 10%;
  top: 10%; */
  color: #ffffff;
  margin-bottom: 0;
  font-weight: 500;
  text-shadow: 2px 2px 5px black;
  



}

.frontBanner {
  position: absolute;
  width: 100%;
  /* left: 20%; */
  top: 15%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-content: center;
  justify-items: center;
  text-align: center;

}

.underSlogan {
  /* position: absolute;
  left: 20%;
  top: 35%; */
  justify-content: center;
  font-size: 2em;
  color: #f2f2f2;
  margin-bottom: 0;
  text-shadow: 2px 2px 5px black;;


}

.background {
  height: 57.5em;
  /* height: 100v */
  overflow: hidden;
  width: 100%;
  /* background-image: url("https://images.unsplash.com/photo-1426927308491-6380b6a9936f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80"); */
  background-image: url('../../assets/img/hero-img.png');
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.jumbo {
  width: 100%;
  position: relative;
  top: -5em;
}
.searchLabel {
  font-size: 1em;
}

.searchForm {
  position: absolute;
  left: 15%;
  top: 50%;

  padding: 0.1em;
  display: flex;
  justify-content: space-between;
  width: 70%;
  height: 4em;
  /* border-radius: 200px; */
}
.row1 {
  width: 100%;
  border-radius: 200px;
}
.col {
  overflow: hidden;
  margin-top: 0rem;
  border-radius: 15px;
}
/* .waves-effect {
  margin: 2em;
} */
.input-field {
  position: relative;
  margin-top: 0rem;
  margin-bottom: 0rem;
  /* width: 15rem; */
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.input-field #distance {
  position: relative;
  margin-top: 0rem;
  margin-bottom: 0rem;
  width: 10rem;
  margin-left: 0.8rem;
  margin-right: 0rem;
}

.row1 .col .s4 {
  overflow: hidden;
  padding: 0.5rem;
}
.row1 .col .s2 {
  overflow: hidden;
  padding: 0.5rem;
  left: 0.7rem;
}

.row1 .col .s1 {
  width: 20%;
  left: auto;
  right: auto;
  overflow: visible;
  /* margin-left: 1.1rem; */
  margin-top: 1rem;
  /* padding-left: 3rem; */
}

.searchBtn {
  margin-top: 0.7em;
  margin-left: 0em;
}
/* #distance {
  width: 10rem;
} */

